kubernetes/cluster/media/radarr/radarr.yaml
# Service: Radarr
# Ingress: radarr.brhd.io
# Label: app.kubernetes.io/name: radarr
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
  labels:
    app.kubernetes.io/name: radarr
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7878
  selector:
    app.kubernetes.io/name: radarr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app.kubernetes.io/name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: media
      labels:
        app.kubernetes.io/name: radarr
    spec:
      restartPolicy: Always
      containers:
        - name: radarr
          image: ghcr.io/hotio/radarr:release-6.4.4.10685
          resources:
            requests:
              memory: 500Mi
              cpu: 500m
            limits:
              memory: 1000Mi
              cpu: 1000m
          ports:
            - containerPort: 7878
          livenessProbe:
            httpGet:
              path: /ping
              port: 7878
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
